Kubernetes/examples/network-policies/space1-allow-egress.yaml
# Two egress rules
# Allow outgoing traffic to namespace "space2"
# Allow outgoing traffic to DNS
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np
  namespace: space1
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: space2               
    - ports:
        - protocol: TCP
          port: 53
        - protocol: UDP
          port: 53
