Kubernetes/examples/network-policies/space2-allow-ingress.yaml
# Allow incoming traffic from namespace "space1" to all "space2" namespace's pods
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np
  namespace: space2
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: space1
